--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
   position: absolute;
   line-height: 1.5rem;
   padding: 4rem;
+  margin: 2rem 0 0 0;
 }
 span {
   color: hsl(277, 64%, 61%);
@@ -39,7 +40,7 @@ h3{
 .main-para{
     width: 55%;
     color:hsla(0, 0%, 100%, 0.75);
-     margin: 60px 0 0 80px;
+     margin: 30px 0 0 90px;
 }
 p {
   font-weight: 400;
